--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
 </head>
 
 <body>
+	<img src="img/to-do-list-app-background.png" alt="to-do-list-app-background" class="to-do-list-app-background" width="540" height="700">
 	<div class="container">
-		<h2>To Do List App</h2>
+		<!--<h2>To Do List App</h2>-->
 		<p><em> Double click to mark an item off, click on "X" to delete an item, and drag items to reorder.</em></p>
        
 		<form name="toDoList">
 			<input type="text" name="ListItem" id="input"/>
+		</form>
     
 		<div onclick="newItem()" id="button">Add</div>
 		<br/>
