--- a/index.html
+++ b/index.html
@@ -33,3 +33,8 @@
   <script src="script.js"></script>
   </body>
 </html>
+<!--jQuery CDN link-->
+<!-- <script
+  src="https://code.jquery.com/jquery-3.3.1.min.js"
+  integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+  crossorigin="anonymous"></script> -->
